--- a/Views/Interview/Index.cshtml
+++ b/Views/Interview/Index.cshtml
@@ -2,18 +2,14 @@
 @model RespondentViewModel
 
 <div>
-    @foreach (var item in Model.Medications.CollectionArray)
-    {
-        
-        while(!Model.Medications.IsDone)
-        {
-            if(!Model.Medications.CallBlock.IsStarted)
-            {
-                <p><b>@Model.Medications.GetCurrentItem().Name</b></p>
-            }
-            var q = (Question) Model.Medications.GetNextElement();
-            <p>@q.Information.QuestionText</p>
-        }
+    @{
+        var medication = Model.Medications.GetCurrentItem();
+
+        var question = (Question)Model.Medications.CallBlock.GetNextElement();
+
+        Html.RenderPartial("_Question", new QuestionViewModel() { Question = question, Medication = medication});
+
     }
+
 
 </div>
